// Vitest Snapshot v1

exports[`serve fs output > _00 manifest.json 1`] = `
Object {
  "background": Object {
    "service_worker": "service-worker-loader.js",
    "type": "module",
  },
  "manifest_version": 3,
  "name": "Extension with copied assets",
  "version": "1.0.0",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "https://example.com/*",
      ],
      "resources": Array [
        "public.html",
        "src/sidebar.html",
        "src/static.html",
      ],
    },
    Object {
      "matches": Array [
        "<all_urls>",
      ],
      "resources": Array [
        "*",
        "**/*",
      ],
      "use_dynamic_url": true,
    },
  ],
}
`;

exports[`serve fs output > _01 output files 1`] = `
Array [
  "manifest.json",
  "public.html",
  "public.js",
  "service-worker-loader.js",
  "src/sidebar.html",
  "src/static.html",
  "static.js",
]
`;

exports[`serve fs output > _02 optimized deps 1`] = `
Set {
  "src/sidebar.html",
  "src/welcome.html",
}
`;

exports[`serve fs output > public.html 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Public</title>
  </head>
  <body>
    <p>
      This HTML file is a web accessible resource and CRXJS copies it directly
      without any processing.
    </p>
    <script src=\\"/public.js\\"></script>
  </body>
</html>
"
`;

exports[`serve fs output > public.js 1`] = `
"console.log('static script')
"
`;

exports[`serve fs output > service-worker-loader.js 1`] = `
"import 'http://localhost:3000/@vite/env';
import 'http://localhost:3000/@crx/client-worker';
"
`;

exports[`serve fs output > src/sidebar.html 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Sidebar</title>
  </head>
  <body>
    <p>
      This HTML page is a sidebar in a content script. It is web accessible and
      supports HMR and build optimizations.
    </p>
    <script src=\\"./sidebar.js\\" type=\\"module\\"></script>
  </body>
</html>
"
`;

exports[`serve fs output > src/static.html 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"IE=edge\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Static</title>
  </head>
  <body>
    <p>
      This HTML file is a web accessible resource and CRXJS copies it directly
      without any processing. Static HTML file assets should go in the public
      dir.
    </p>
    <script src=\\"/static.js\\"></script>
  </body>
</html>
"
`;

exports[`serve fs output > static.js 1`] = `
"console.log('static script')
"
`;
